gateway_utils/iptables
# Generated by iptables-save v1.4.21 on Mon Nov 23 16:10:51 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [3472641:1076913367]
:INLOG - [0:0]
:OUTLOG - [0:0]
#:FORWARD_IN_ZONES - [0:0]
#:FORWARD_IN_ZONES_SOURCE - [0:0]
#:FORWARD_OUT_ZONES - [0:0]
#:FORWARD_OUT_ZONES_SOURCE - [0:0]
#:FORWARD_direct - [0:0]
#:FWDI_public - [0:0]
#:FWDI_public_allow - [0:0]
#:FWDI_public_deny - [0:0]
#:FWDI_public_log - [0:0]
#:FWDO_public - [0:0]
#:FWDO_public_allow - [0:0]
#:FWDO_public_deny - [0:0]
#:FWDO_public_log - [0:0]
#:INPUT_ZONES - [0:0]
#:INPUT_ZONES_SOURCE - [0:0]
#:INPUT_direct - [0:0]
#:IN_public - [0:0]
#:IN_public_allow - [0:0]
#:IN_public_deny - [0:0]
#:IN_public_log - [0:0]
#:OUTPUT_direct - [0:0]
#
#@@Accept ssh
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
#@@libvirt virtual machines configuration
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
#@@Accept all on OpenVPN interface
#-A INPUT -i tun0 -j ACCEPT
#@@Accept all on the private network(s)
#-A INPUT -i br_vlan0 -j ACCEPT
#-A INPUT -i br_rmm -j ACCEPT
#Added by default
#-A INPUT -j INPUT_direct
#-A INPUT -j INPUT_ZONES_SOURCE
#-A INPUT -j INPUT_ZONES
-A INPUT -p icmp -j ACCEPT
-A INPUT -j INLOG
-A INLOG -m limit --limit 2/min -j LOG --log-prefix "IPTables-Dropped_INPUT: "
-A INLOG -j DROP
#-A INPUT -j REJECT --reject-with icmp-host-prohibited
#@@libvirt virtual machines configuration
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
#@@Forward data from private network
#-A FORWARD -s 192.168.1.0/24 ! -d 192.168.1.0/24 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -i lo -j ACCEPT
#-A FORWARD -j FORWARD_direct
#-A FORWARD -j FORWARD_IN_ZONES_SOURCE
#-A FORWARD -j FORWARD_IN_ZONES
#-A FORWARD -j FORWARD_OUT_ZONES_SOURCE
#-A FORWARD -j FORWARD_OUT_ZONES
#-A FORWARD -p icmp -j ACCEPT
#-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A OUTLOG -m limit --limit 2/min -j LOG --log-prefix "IPTables-Dropped_OUTPUT: "
-A OUTLOG -j DROP
#-A OUTPUT -j OUTPUT_direct
#-A FORWARD_IN_ZONES -g FWDI_public
#-A FORWARD_OUT_ZONES -g FWDO_public
#-A FWDI_public -j FWDI_public_log
#-A FWDI_public -j FWDI_public_deny
#-A FWDI_public -j FWDI_public_allow
#-A FWDO_public -j FWDO_public_log
#-A FWDO_public -j FWDO_public_deny
#-A FWDO_public -j FWDO_public_allow
#-A INPUT_ZONES -g IN_public
#-A IN_public -j IN_public_log
#-A IN_public -j IN_public_deny
#-A IN_public -j IN_public_allow
#-A IN_public_allow -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
# Completed on Mon Nov 23 16:10:51 2015
# Generated by iptables-save v1.4.21 on Mon Nov 23 16:10:51 2015
*raw
:PREROUTING ACCEPT [3603634:1571871183]
:OUTPUT ACCEPT [3473477:1077187575]
:OUTPUT_direct - [0:0]
:PREROUTING_direct - [0:0]
-A PREROUTING -j PREROUTING_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Mon Nov 23 16:10:51 2015
# Generated by iptables-save v1.4.21 on Mon Nov 23 16:10:51 2015
*security
:INPUT ACCEPT [3553243:1526542847]
:FORWARD ACCEPT [47924:45156720]
:OUTPUT ACCEPT [3473477:1077187575]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Mon Nov 23 16:10:51 2015
# Generated by iptables-save v1.4.21 on Mon Nov 23 16:10:51 2015
*mangle
:PREROUTING ACCEPT [3603634:1571871183]
:INPUT ACCEPT [3553906:1526606223]
:FORWARD ACCEPT [49728:45264960]
:OUTPUT ACCEPT [3473477:1077187575]
:POSTROUTING ACCEPT [3521401:1122344295]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A POSTROUTING -j POSTROUTING_direct
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Mon Nov 23 16:10:51 2015
# Generated by iptables-save v1.4.21 on Mon Nov 23 16:10:51 2015
*nat
:PREROUTING ACCEPT [10334:964669]
:INPUT ACCEPT [1680:345719]
:OUTPUT ACCEPT [12879:906339]
:POSTROUTING ACCEPT [12884:906759]
#:OUTPUT_direct - [0:0]
#:POSTROUTING_ZONES - [0:0]
#:POSTROUTING_ZONES_SOURCE - [0:0]
#:POSTROUTING_direct - [0:0]
#:POST_public - [0:0]
#:POST_public_allow - [0:0]
#:POST_public_deny - [0:0]
#:POST_public_log - [0:0]
#:PREROUTING_ZONES - [0:0]
#:PREROUTING_ZONES_SOURCE - [0:0]
#:PREROUTING_direct - [0:0]
#:PRE_public - [0:0]
#:PRE_public_allow - [0:0]
#:PRE_public_deny - [0:0]
#:PRE_public_log - [0:0]
#-A PREROUTING -j PREROUTING_direct
#-A PREROUTING -j PREROUTING_ZONES_SOURCE
#-A PREROUTING -j PREROUTING_ZONES
#-A OUTPUT -j OUTPUT_direct
#@@libvirt virtual machines configuration
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
#@@Set source ip of forwarded traffic from private network to the gateway's public IP
#-A POSTROUTING -s 192.168.1.0/24 ! -d 192.168.1.0/24 -j MASQUERADE 
#-A POSTROUTING -j POSTROUTING_direct
#-A POSTROUTING -j POSTROUTING_ZONES_SOURCE
#-A POSTROUTING -j POSTROUTING_ZONES
#-A POSTROUTING_ZONES -g POST_public
#-A POST_public -j POST_public_log
#-A POST_public -j POST_public_deny
#-A POST_public -j POST_public_allow
#-A PREROUTING_ZONES -g PRE_public
#-A PRE_public -j PRE_public_log
#-A PRE_public -j PRE_public_deny
#-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Mon Nov 23 16:10:51 2015
